# battery-disassembly-llm-planning

./: .gitignore  FINAL_START.sh  PROJECT_STRUCTURE.md  README.md  REVISION_MEMO.md
experiments/: README.md  RQ1_MODIFICATIONS.md  analyze_final_results.py  monitor_experiments.sh  monitor_rq1.sh  requirements.txt  run_fast.py  run_rq1_safety.py  run_rq2_memory.py  run_rq3_ablation.py  run_rq4_perception_noise.py  unified_test_suite.json
experiments/eval/: README.md  analyze.py  build_leakfree_assets.py  build_workbook.py  compute_kappa.py  gen_reference_plans.py  memory_split.json  metrics.py  reference_plans.json  stats.py  test_metrics.py  (+2 more)
src/battery_dismantle_task/: .gitignore  package.xml  setup.cfg  setup.py
src/battery_dismantle_task/battery_dismantle_task/: interactive_joint_control.py  motion_config.py  motion_executor.py  object_definitions.py  publish_initial_joint_states.py  scene_manager.py  session.py  skill_handlers.py  skill_server.py  visual_state_manager.py
src/battery_dismantle_task/config/: initial_positions.yaml  waypoints.json
src/battery_dismantle_task/config/moveit/: gen3_robotiq_2f_85.srdf  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/battery_dismantle_task/config/rviz/: moveit.rviz
src/battery_dismantle_task/grippers/robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro  robotiq_gripper.ros2_control.xacro
src/battery_dismantle_task/launch/: fake_execution_complete.launch.py  run_dismantle_task.launch.py  start_controllers_interactive.launch.py
src/battery_dismantle_task/urdf/: gen3_robotiq_2f_85.xacro
(+19 files in other folders)
